# Schelbert-Image-MC-Converter

./: .gitignore  .replit  README.md  RobotScript.py  generate_blackmap.py  generate_blackmap.spec  map_generator.py  parser.py  pyproject.toml  requirements.txt  testRetriever.py
MAP/: DECO.txt
