[tool.poetry]
name = "schelbert-image-mc-converter"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "^2.8.0"
requests = "^2.27.1"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
