[tool.poetry]
name = "schelbert-image-mc-converter"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "^2.8.0"
requests = "^2.27.1"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
staticmap = "^0.5.5"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
